# Mine

./: .gitignore  README.md  pyproject.toml  requirements.txt
bundestag_mine_refactor/: README.md  pyproject.toml
bundestag_mine_refactor/bundestag_mine_refactor/: cli.py  config.py  dip_client.py  parser.py  pipeline.py  storage.py  types.py
bundestag_mine_refactor/src/bundestag_mine_refactor/: __init__.py
bundestag_mine_refactor/src/bundestag_mine_refactor/core/: __init__.py
bundestag_mine_refactor/src/bundestag_mine_refactor/database/: models.py  storage.py
bundestag_mine_refactor/src/bundestag_mine_refactor/parsing/: speeches.py
bundestag_mine_refactor/src/bundestag_mine_refactor/pipeline/: import_pipeline.py
bundestag_mine_refactor/src/bundestag_mine_refactor/summarization/: __init__.py
bundestag_mine_refactor/tests/: test_dip_client.py  test_parser.py
bundestag_mine_refactor/tests/parsing/: test_speeches.py
docs/: architecture.md
src/bundestag_mine_refactor/: __init__.py  __main__.py  cli.py  runtime.py
src/bundestag_mine_refactor/clients/: dip.py
src/bundestag_mine_refactor/config/: settings.py
src/bundestag_mine_refactor/core/: types.py
src/bundestag_mine_refactor/database/: __init__.py
src/bundestag_mine_refactor/parsing/: __init__.py
src/bundestag_mine_refactor/pipeline/: __init__.py
src/mine/: __main__.py  cli.py
src/mine/ui/: app.py  (+1 more)
tests/clients/: test_dip_client.py
tests/config/: test_settings.py
tests/database/: test_storage_overview.py
tests/parsing/: test_speeches.py
tests/pipeline/: test_import_pipeline.py
(+11 files in other folders)
