[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bundestag-mine-refactor"
version = "0.1.0"
description = "Modernisierte Python-Pipeline für Bundestagsprotokolle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "SQLAlchemy>=2.0",
    "google-genai>=1.38",
    "nicegui>=1.4.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
bundestag-mine-refactor = "bundestag_mine_refactor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
