[project]
name = "bundestag-mine-refactor"
version = "0.1.0"
description = "Modernisierte Python-Pipeline für Bundestagsprotokolle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
bundestag-mine-refactor = "bundestag_mine_refactor.cli:main"
